--- a/GUI/new Inventory App/nbproject/project.properties
+++ b/GUI/new Inventory App/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=InventoryApp
+application.vendor=Yeab
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/InventoryApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/InventoryApp
+endorsed.classpath=
 excludes=
 file.reference.flatlaf-1.5.jar=lib\\flatlaf-1.5.jar
 file.reference.mysql-connector-java-8.0.26.jar=C:\\Users\\esube\\Downloads\\Programs\\mysql-connector-java-8.0.26\\mysql-connector-java-8.0.26\\mysql-connector-java-8.0.26.jar
@@ -75,7 +77,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=InventoryApp
-main.class=inventoryapp.InventoryApp
+main.class=inventoryapp.Dashboard
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
