Changed the variables the same as the database attributes

--- a/GUI/new Inventory App/nbproject/private/private.properties
+++ b/GUI/new Inventory App/nbproject/private/private.properties
@@ -2,8 +2,8 @@ compile.on.save=false
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.mysql-connector-java-8.0.26.jar=C:\\Program Files\\Java\\jdk-16.0.2\\db-derby-10.14.2.0-bin
+file.reference.mysql-connector-java-8.0.26.jar=C:\\Users\\Yeab\\Desktop\\CS341\\Lab Files\\mysql-connector-java-8.0.26\\mysql-connector-java-8.0.26.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\kalea\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
+user.properties.file=C:\\Users\\Yeab\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
