--- a/GUI/new Inventory App/nbproject/private/private.properties
+++ b/GUI/new Inventory App/nbproject/private/private.properties
@@ -6,4 +6,4 @@ file.reference.mysql-connector-java-8.0.26.jar=C:\\Users\\Yeab\\Desktop\\CS341\\
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Yeab\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
+user.properties.file=C:\\Users\\kalea\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
