test on Merge Conflict

--- a/GUI Inventory App/nbproject/project.properties
+++ b/GUI Inventory App/nbproject/project.properties
@@ -36,7 +36,7 @@ dist.jlink.output=${dist.jlink.dir}/InventoryApp
 endorsed.classpath=
 excludes=
 file.reference.flatlaf-1.5.jar=lib\\flatlaf-1.5.jar
-file.reference.mysql-connector-java-8.0.26.jar=C:\\Users\\esube\\Downloads\\Programs\\mysql-connector-java-8.0.26\\mysql-connector-java-8.0.26\\mysql-connector-java-8.0.26.jar
+file.reference.mysql-connector-java-8.0.26.jar=C:\\wamp64\\mysql-connector-java-8.0.26\\mysql-connector-java-8.0.26.jar
 includes=**
 jar.compress=false
 javac.classpath=\
