--- a/GUI Inventory App/nbproject/project.properties
+++ b/GUI Inventory App/nbproject/project.properties
@@ -35,13 +35,17 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/InventoryApp
 endorsed.classpath=
 excludes=
+file.reference.Documents-mysql-connector-java-8.0.26=C:\\Users\\esube\\Documents\\mysql-connector-java-8.0.26
 file.reference.flatlaf-1.5.jar=lib\\flatlaf-1.5.jar
 file.reference.mysql-connector-java-8.0.26.jar=C:\\wamp64\\mysql-connector-java-8.0.26\\mysql-connector-java-8.0.26.jar
+file.reference.mysql-connector-java-8.0.26.jar-1=C:\\Users\\esube\\Documents\\mysql-connector-java-8.0.26\\mysql-connector-java-8.0.26.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.flatlaf-1.5.jar}:\
-    ${file.reference.mysql-connector-java-8.0.26.jar}
+    ${file.reference.mysql-connector-java-8.0.26.jar}:\
+    ${file.reference.Documents-mysql-connector-java-8.0.26}:\
+    ${file.reference.mysql-connector-java-8.0.26.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
