--- a/GUI Inventory App/nbproject/project.properties
+++ b/GUI Inventory App/nbproject/project.properties
@@ -45,7 +45,8 @@ javac.classpath=\
     ${file.reference.flatlaf-1.5.jar}:\
     ${file.reference.mysql-connector-java-8.0.26.jar}:\
     ${file.reference.Documents-mysql-connector-java-8.0.26}:\
-    ${file.reference.mysql-connector-java-8.0.26.jar-1}
+    ${file.reference.mysql-connector-java-8.0.26.jar-1}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
